# mapres

./: README.md  pyproject.toml  version.yaml
.github/workflows/: release.yml
src/mapres/: __init__.py  cache.py  datamap.py  exceptions.py  layers.py  resolver.py  syntax.py  utils.py
src/mapres/maps/: __init__.py  color.py  math.py  time.py
