[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mapres"
version = "0.0.0"
description = "A powerfull mapping utility"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
    { name = "iFamished" }
]

keywords = [
    "templating",
    "automation",
    "server-management",
    "hungerlib",
]

dependencies = [
    "requests",
    "mcrcon",
    "PyYaml",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/iFamishedX/mapres"
Documentation = "https://github.com/iFamishedX/mapres"
Source = "https://github.com/iFamishedX/mapres"
Issues = "https://github.com/iFamishedX/mapres/issues"

[tool.setuptools.packages.find]
where = ["src"]
